Prevent content from being clipped by nav
Also made splash screen thumbnail hidden on small screens to decrease wasted space on mobile.

--- a/stylesheets/site-structure.scss
+++ b/stylesheets/site-structure.scss
@@ -57,14 +57,12 @@
 }
 
 // Body spacing
-body.no-jumbotron {
+body {
     padding-top: 40px;
 }
 
 @media (max-width: $screen-md-max) {
-    body.no-jumbotron {
         padding-top: 0;
-    }
 }
 
 // Panel title size
